[package]
name = "kim_teloxide"
version = "0.1.0"
edition = "2021"

[dependencies]
teloxide = { version = "0.12", features = ["macros"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

log = "0.4"
simplelog = "0.12"
time = "0.3"

toml = "0.7"
exitcode = "1"

[profile.release]
strip = true
opt-level = "s"
lto = true
panic = "abort"
codegen-units = 1
